templates/k8s-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SITE_NAME
  labels:
    app: SITE_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: SITE_NAME
  template:
    metadata:
      labels:
        app: SITE_NAME
    spec:
      containers:
        - name: SITE_NAME
          image: ghcr.io/jadlao/SITE_NAME:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
