templates/k8s-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SITE_NAME
spec:
  selector:
    app: SITE_NAME
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
